syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.stanford.futuredata.uniserve";
option java_outer_classname = "BrokerCoordinatorProto";

package brokercoordinator;

service BrokerCoordinator {
    rpc QueryStatistics (QueryStatisticsMessage) returns (QueryStatisticsResponse) {}
    rpc TableInfo (TableInfoMessage) returns (TableInfoResponse) {}
    rpc CreateTable (CreateTableMessage) returns (CreateTableResponse) {}

    rpc StoreQuery (StoreQueryMessage) returns (StoreQueryResponse) {}
}


message StoreQueryMessage {
    bytes query = 1;
}
message StoreQueryResponse{
    int32 status = 1;
}

message QueryStatisticsMessage {
    bytes queryStatistics = 1;
}

message QueryStatisticsResponse {}

message TableInfoMessage {
    string tableName = 1;
}

message TableInfoResponse {
    int32 returnCode = 1;
    int32 id = 2;
    int32 numShards = 3;
    bytes triggeredQueries = 4;
    bytes attributeNames = 5;
    bytes keyStructure = 6;
    bytes shardIDs = 7;
}

message CreateTableMessage {
    string tableName = 1;
    int32 numShards = 2;
    bytes attributeNames = 3;
    bytes keyStructure = 4;
}

message CreateTableResponse {
    int32 returnCode = 1;
}